# BasicInventoryManagementSystem

./: .gitignore  CMakeLists.txt  README.md
include/: inventory.hpp  item.hpp
src/: inventory.cpp  item.cpp  main.cpp
text-files/: input.txt  output.txt
